--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Ring_01/ft_printf"]
 	path = Ring_01/ft_printf
 	url = https://github.com/Ironesto/ft_printf.git
+[submodule "Ring_01/get_next_line"]
+	path = Ring_01/get_next_line
+	url = https://github.com/Ironesto/get_next_line.git
