--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Ring_03/minishell"]
 	path = Ring_03/minishell
 	url = https://github.com/Ironesto/minishell.git
+[submodule "Ring_04/netPractice"]
+	path = Ring_04/netPractice
+	url = https://github.com/Ironesto/netPractice.git
