--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "Ring_04/cpp"]
 	path = Ring_04/cpp
 	url = https://github.com/Ironesto/cpp.git
+[submodule "Ring_05/Inception"]
+	path = Ring_05/Inception
+	url = https://github.com/Ironesto/Inception.git
